<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Sebateks</string>
    <string name="empty">Empty</string>
    <string name="submit">Submit</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="network_failure">Network Failure</string>
    <string name="conversion_error">Conversion Error</string>
    <string name="getting_user">Please Wait</string>
    <string name="empty_fields">"Empty Fields Please Fill Right Information "</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="next">Next</string>
    <string name="email">Email</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="phone_no">phone no</string>
    <string name="password">Password</string>
    <string name="town">Town</string>
    <string name="object_name">Object Name</string>
    <string name="add">Add</string>
    <string name="_5_points_have_been_added">5 points have been added</string>
    <string name="business_friends">Business friends</string>
    <string name="search">Search</string>
    <string name="add_notes">Add notes</string>
    <string name="name">Name</string>
    <string name="message">Message</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_worry_it_occurs_please_enter_the_email_address_linked_with_your_account_new_code_will_be_received_after_60_seconds">Don\'t worry! It occurs. Please enter the email address linked with your account. New code will be received after 60 seconds</string>
    <string name="send">Send</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="or_continue_with">Or Continue With</string>
    <string name="company_s_friend">Company\'s Friend</string>
    <string name="manager">Manager</string>
    <string name="administrator">Administrator</string>
    <string name="print">Print</string>
    <string name="save">Save</string>
    <string name="i_aggree">I agreed with  </string>
    <string name="tos">Term of services</string>
    <string name="and">and</string>
    <string name="privacy"> Privacy Policy</string>
    <string name="add_manager">Add Manager</string>
    <string name="pictures">Pictures</string>
    <string name="manager_list">Manager List</string>
    <string name="invalid_email_address">Invalid Email Address</string>
    <string name="add_com_frnd">Add Company\'s Friends</string>
    <string name="scan_errer">Scan Error</string>
    <string name="qr_cannot_be_scanned">QR Code could not be scanned</string>
    <string name="ok">OK</string>
    <string name="your_points">YOUR POINTS</string>
    <string name="your_qr_and_id">YOUR QR AND ID</string>
    <string name="contact_to_company">CONTACT TO COMPANY</string>
    <string name="price_list">PRICE LIST</string>
    <string name="companys_friend">COMPANYS FRIEND</string>
    <string name="scan_qr">SCAN QR</string>
    <string name="note">NOTE</string>
    <string name="qr_code">Qr Code</string>
    <string name="manager_details">Manager Detail\'s</string>
    <string name="points_history">Points History</string>
    <string name="comp_frnd">Company\'s Friend Details</string>
    <string name="invalid_qr">Not A Valid Qr code </string>
    <string name="reward_points_added_successfully">Reward Points Added Successfully</string>
    <string name="comp_firnss">Company\'s Friends</string>
    <string name="no_data">No Data Found..</string>
    <string name="points">Points</string>
    <string name="delete_manager">Delete Manager</string>
    <string name="access_manager">Access Manager</string>
    <string name="update_manager">Update Manager</string>
    <string name="wifi">WIfi</string>
    <string name="network">Network</string>
    <string name="unavailable">Unavailable</string>
    <string name="notification_channel_id">101</string>
    <string name="saved_to_g">" saved to Gallery"</string>
    <string name="notes">Notes</string>
    <string name="topic">Topic</string>
    <string name="noteby">Note By :-</string>
    <string name="delete_note">Delete Note</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_you_want_to_delete_this_child">Are you sure you want to delete this note ?</string>
    <string name="invalid_doc">Invalid Document</string>
    <string name="setting">Setting</string>
    <string name="update_coin">Update Coin</string>
    <string name="note_coin">Note :- By changing this value you will change no of coin company friend recive on every successful scan </string>
    <string name="coin">Coin</string>
    <string name="reward_coin_per_scan">Reward Coin per scan</string>
    <string name="reward_coins">Reward Coin\'s</string>
    <string name="edit">    Edit   </string>
    <string name="are_you_sure_you_want_to_change_this_child">Are you sure you want to change coins ?</string>
    <string name="logout">Logout</string>
    <string name="arey_you_sure_to_logout">Are you sure you want to logout from the App ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="points_for_1_qr">Points for 1 QR</string>
    <string name="all_points">All points</string>
    <string name="please_allow_permission">Please Allow Permission\'s For Camera</string>
    <string name="auth_errer">session expired please login again</string>
</resources>