<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="false">

        <RelativeLayout
            android:id="@+id/background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:gravity="bottom"
            android:orientation="vertical">

            <LinearLayout
                style="@style/Widget.Design.BottomNavigationView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_bold"
                    android:padding="@dimen/_6sdp"
                    android:text="@string/add_notes"
                    android:textAlignment="center"
                    android:textColor="@color/texts"
                    android:textSize="@dimen/_12sdp" />

                <EditText
                    android:id="@+id/edt_topic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_25sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_25sdp"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:background="@null"
                    android:drawableLeft="@drawable/img_email"
                    android:drawablePadding="@dimen/_15sdp"
                    android:fontFamily="@font/poppinsregular"
                    android:hint="@string/topic"
                    android:inputType="text"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/texts"
                    android:textColorHint="@color/texts"
                    android:textSize="@dimen/_12sdp" />

                <EditText
                    android:id="@+id/edt_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_25sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_25sdp"
                    android:layout_marginBottom="@dimen/_30sdp"
                    android:background="@null"
                    android:drawableLeft="@drawable/message_img"
                    android:drawablePadding="@dimen/_15sdp"
                    android:fontFamily="@font/poppinsregular"
                    android:gravity="top|start"
                    android:hint="@string/message"
                    android:inputType="textMultiLine"
                    android:lines="8"
                    android:maxLines="10"
                    android:minLines="4"
                    android:padding="@dimen/_10sdp"
                    android:scrollbars="vertical"
                    android:textColor="@color/texts"
                    android:textColorHint="@color/texts"
                    android:textSize="@dimen/_12sdp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_submit"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="@dimen/_50sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_50sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:elevation="@dimen/_3sdp"
                    android:fontFamily="@font/poppins_bold"
                    android:outlineProvider="background"
                    android:outlineSpotShadowColor="@color/white"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/add"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold"
                    app:backgroundTint="@color/colorPrimary"
                    app:cornerRadius="@dimen/_15sdp"
                    app:rippleColor="@color/colorSecondary" />
            </LinearLayout>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>
</layout>

