<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"

    >

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:background="@drawable/background_edit"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/_5sdp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin=".5dp"
            android:orientation="vertical"
            android:padding="@dimen/_5sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:fontFamily="@font/poppins_medium"
                android:padding="@dimen/_10sdp"
                android:textAlignment="center"
                android:text="@string/are_you_sure_you_want_to_change_this_child"
                android:textColor="@color/texts"
                android:textSize="@dimen/_12sdp" />
            <EditText
                android:layout_gravity="center"
                android:id="@+id/edt_coin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_55sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_55sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/background_edit"
                android:drawableLeft="@drawable/ic_baseline_monetization"
                android:drawablePadding="@dimen/_15sdp"
                android:fontFamily="@font/poppinsregular"
                android:hint="@string/coin"
                android:digits="0123456789"
                android:maxLength="4"
                android:inputType="number"
                android:padding="@dimen/_15sdp"
                android:textColor="@color/texts"
                android:textColorHint="@color/texts"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_yes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_margin="@dimen/_5sdp"
                android:layout_weight="1"
                android:elevation="@dimen/_3sdp"
                android:fontFamily="@font/poppins_medium"
                android:outlineProvider="background"
                android:outlineSpotShadowColor="@color/colorPrimary"
                android:padding="@dimen/_10sdp"
                android:text="@string/update_coin"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                app:backgroundTint="@color/white"
                app:cornerRadius="@dimen/_10sdp"
                app:rippleColor="@color/colorPrimary" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_margin="@dimen/_5sdp"
                android:layout_weight="1"
                android:elevation="@dimen/_3sdp"
                android:fontFamily="@font/poppins_medium"
                android:outlineProvider="background"
                android:outlineSpotShadowColor="@color/white"
                android:padding="@dimen/_10sdp"
                android:text="@string/cancel"
                android:textAllCaps="true"
                android:textColor="@color/texts"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                app:backgroundTint="@color/white"
                app:cornerRadius="@dimen/_10sdp"
                app:rippleColor="@color/black" />

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
