<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="false"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/background"
            android:orientation="vertical"
            android:gravity="bottom"
            android:background="@color/transparent">

            <LinearLayout
                style="@style/Widget.Design.BottomNavigationView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_bold"
                    android:padding="@dimen/_6sdp"
                    android:text="@string/access_manager"
                    android:textAlignment="center"
                    android:textColor="@color/texts"
                    android:textSize="@dimen/_12sdp" />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_delete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:elevation="@dimen/_3sdp"
                    android:fontFamily="@font/poppins_bold"
                    android:outlineProvider="background"
                    android:outlineSpotShadowColor="@color/white"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/delete_manager"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold"
                    app:backgroundTint="@color/red"
                    app:cornerRadius="@dimen/_15sdp"
                    app:rippleColor="@color/colorSecondary" />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:elevation="@dimen/_3sdp"
                    android:fontFamily="@font/poppins_bold"
                    android:outlineProvider="background"
                    android:outlineSpotShadowColor="@color/white"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/update_manager"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold"
                    app:backgroundTint="@color/colorPrimaryYellow"
                    app:cornerRadius="@dimen/_15sdp"
                    app:rippleColor="@color/colorSecondary" />


            </LinearLayout>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>
</layout>
